Fix two button issue on small screens

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -261,7 +261,7 @@ footer {
   }
 
   header li, header ul li + li + li {
-    width:33%;
+    width:50%;
   }
 }
 
